--- a/ttstcc/localisation/eaw_griffon_continent_countries_l_english.yml
+++ b/ttstcc/localisation/eaw_griffon_continent_countries_l_english.yml
@@ -596,11 +596,11 @@ STW_democratic_ADJ:0 "Strawberry"
 STW_neutrality_ADJ:0 "Strawberry"
 STW_communism_ADJ:0 "Strawberry"
 
-HLQ_neutrality:0 "Knightly Order of Hellquill"
+HLQ_neutrality:0 "Hellquill Occupation Zone"
 HLQ_fascism:0 "Knightly Order of Hellquill"
 HLQ_communism:0 "People's Republic of Hellquill"
 HLQ_democratic:0 "Knightly Order of Hellquill"
-HLQ_neutrality_DEF:0 "The Knightly Order of Hellquill"
+HLQ_neutrality_DEF:0 "Hellquill Occupation Zone"
 HLQ_fascism_DEF:0 "The Knightly Order of Hellquill"
 HLQ_communism_DEF:0 "The People's Republic of Hellquill"
 HLQ_democratic_DEF:0 "The Knightly Order of Hellquill"
