OLOLO Actually dev version

--- a/ttstcc/localisation/eaw_griffon_continent_countries_l_english.yml
+++ b/ttstcc/localisation/eaw_griffon_continent_countries_l_english.yml
@@ -329,7 +329,7 @@ AET_neutrality_ADJ:0 "Greifwalder"
 AET_communism_ADJ:0 "Greifwalder"
 
 JER_neutrality:0 "Kingdom of Aquileia"
-JER_fascism:0 "Aquileian Republic"
+JER_fascism:0 "Aquileian National State"
 JER_communism:0 "Aquileian Republic"
 JER_democratic:0 "Aquileian Republic"
 JER_democratic_DEF:0 "The Second Aquileian Republic"
@@ -340,76 +340,6 @@ JER_fascism_ADJ:0 "Aquileian"
 JER_democratic_ADJ:0 "Aquileian"
 JER_neutrality_ADJ:0 "Aquileian"
 JER_communism_ADJ:0 "Aquileian"
-
-# For JFT
-JER_REPUBLIC_democratic:0 "Aquileian Republic"
-JER_REPUBLIC_democratic_DEF:0 "The Second Aquileian Republic"
-JER_REPUBLIC_democratic_ADJ:0 "Aquileian"
-
-JER_formed_neutrality:0 "Kingdom of Aquileia"
-JER_formed_fascism:0 "Aquileian Republic"
-JER_formed_communism:0 "Aquileian Republic"
-JER_formed_democratic:0 "Aquileian Republic"
-JER_formed_democratic_DEF:0 "The Second Aquileian Republic"
-JER_formed_fascism_DEF:0 "The Second Aquileian Republic"
-JER_formed_communism_DEF:0 "The Second Aquileian Republic"
-JER_formed_neutrality_DEF:0 "The Kingdom of Aquileia"
-JER_formed_fascism_ADJ:0 "Aquileian"
-JER_formed_democratic_ADJ:0 "Aquileian"
-JER_formed_neutrality_ADJ:0 "Aquileian"
-JER_formed_communism_ADJ:0 "Aquileian"
-
-JES_neutrality:0 "County of Flowerino"
-JES_fascism:0 "County of Flowerino"
-JES_communism:0 "Griffon's Republic of Flowerino"
-JES_democratic:0 "County of Flowerino"
-JES_neutrality_DEF:0 "The County of Flowerino"
-JES_fascism_DEF:0 "The County of Flowerino"
-JES_communism_DEF:0 "The Griffon's Republic of Flowerino"
-JES_democratic_DEF:0 "The County of Flowerino"
-JES_fascism_ADJ:0 "Flowerian"
-JES_democratic_ADJ:0 "Flowerian"
-JES_neutrality_ADJ:0 "Flowerian"
-JES_communism_ADJ:0 "Flowerian"
-
-JEB_neutrality:0 "Duchy Of Rila"
-JEB_fascism:0 "Duchy Of Rila"
-JEB_communism:0 "Free Republic of Rila"
-JEB_democratic:0 "Duchy Of Rila"
-JEB_neutrality_DEF:0 "The Duchy Of Rila"
-JEB_fascism_DEF:0 "The Duchy Of Rila"
-JEB_communism_DEF:0 "The Free Republic of Rila"
-JEB_democratic_DEF:0 "The Duchy Of Rila"
-JEB_fascism_ADJ:0 "Rilian"
-JEB_democratic_ADJ:0 "Rilian"
-JEB_neutrality_ADJ:0 "Rilian"
-JEB_communism_ADJ:0 "Rilian"
-
-JFT_neutrality:0 "Barony of Pridea"
-JFT_fascism:0 "Barony of Pridea"
-JFT_communism:0 "Pridean Republic"
-JFT_democratic:0 "Barony of Pridea"
-JFT_neutrality_DEF:0 "The Barony of Pridea"
-JFT_fascism_DEF:0 "The Barony of Pridea"
-JFT_communism_DEF:0 "The Pridean Republic"
-JFT_democratic_DEF:0 "The Barony of Pridea"
-JFT_fascism_ADJ:0 "Pridean"
-JFT_democratic_ADJ:0 "Pridean"
-JFT_neutrality_ADJ:0 "Pridean"
-JFT_communism_ADJ:0 "Pridean"
-
-JRR_neutrality:0 "Marcher-Lordship of Westkeep"
-JRR_fascism:0 "Marcher-Lordship of Westkeep"
-JRR_communism:0 "Westkeep Republic"
-JRR_democratic:0 "Marcher-Lordship of Westkeep"
-JRR_neutrality_DEF:0 "The Marcher-Lordship of Westkeep"
-JRR_fascism_DEF:0 "The Marcher-Lordship of Westkeep"
-JRR_communism_DEF:0 "The Westkeep Republic"
-JRR_democratic_DEF:0 "The Marcher-Lordship of Westkeep"
-JRR_fascism_ADJ:0 "Westkeeper"
-JRR_democratic_ADJ:0 "Westkeeper"
-JRR_neutrality_ADJ:0 "Westkeeper"
-JRR_communism_ADJ:0 "Westkeeper"
 
 BOI_neutrality:0 "Kingdom of Griffonstone"
 BOI_fascism:0 "Kingdom of Griffonstone"
@@ -713,57 +643,18 @@ FBK_kingdom_communism_ADJ:0 "Farbrookian"
 FBK_kingdom_neutrality_ADJ:0 "Farbrookian"
 FBK_kingdom_democratic_ADJ:0 "Farbrookian"
 
-GRY_hetmanate_fascism:0 "Zaphzan Hetmanate"
-GRY_hetmanate_communism:0 "Kaiv Commune"
-GRY_hetmanate_democratic:0 "Kingdom of Gryphia"
-GRY_hetmanate_neutrality:0 "Zaphzan Hetmanate"
-GRY_hetmanate_fascism_DEF:0 "The Zaphzan Hetmanate"
-GRY_hetmanate_communism_DEF:0 "The Kaiv Commune"
-GRY_hetmanate_democratic_DEF:0 "The Kingdom of Gryphia"
-GRY_hetmanate_neutrality_DEF:0 "The Zaphzan Hetmanate"
-GRY_hetmanate_fascism_ADJ:0 "Zaphzan"
-GRY_hetmanate_communism_ADJ:0 "Kaivan"
-GRY_hetmanate_democratic_ADJ:0 "Gryphian"
-GRY_hetmanate_neutrality_ADJ:0 "Zaphzan Hetmanate"
-
 GRY_fascism:0 "New Hetmanate"
 GRY_communism:0 "Kaiv Commune"
 GRY_democratic:0 "Republic Of Zaphzia"
-GRY_neutrality:0 "Gryphian Host"
+GRY_neutrality:0 "Republic Of Zaphzia"
 GRY_fascism_DEF:0 "The New Hetmanate"
 GRY_communism_DEF:0 "The Kaiv Commune"
 GRY_democratic_DEF:0 "The Republic Of Zaphzia"
-GRY_neutrality_DEF:0 "The Gryphian Host"
+GRY_neutrality_DEF:0 "The Republic Of Zaphzia"
 GRY_fascism_ADJ:0 "Zaphzian"
 GRY_communism_ADJ:0 "Kaivan"
 GRY_democratic_ADJ:0 "Zaphzian"
 GRY_neutrality_ADJ:0 "Gryphian"
-
-GRY_kingdom_democratic:0 "Kingdom of Zaphzia"
-GRY_kingdom_democratic_DEF:0 "The Kingdom of Zaphzia"
-GRY_kingdom_democratic_ADJ:0 "Zaphzian"
-GRY_kingdom_fascism:0 "Kingdom of Zaphzia"
-GRY_kingdom_fascism_DEF:0 "The Kingdom of Zaphzia"
-GRY_kingdom_fascism_ADJ:0 "Zaphzian"
-GRY_kingdom_communism:0 "Kaiv Commune"
-GRY_kingdom_communism_DEF:0 "The Kaiv Commune"
-GRY_kingdom_communism_ADJ:0 "Kaivan"
-GRY_kingdom_neutrality:0 "Kingdom of Zaphzia"
-GRY_kingdom_neutrality_DEF:0 "The Kingdom of Zaphzia"
-GRY_kingdom_neutrality_ADJ:0 "Zaphzian"
-
-GRY_dictatorship_democratic:0 "Republic of Zaphzia"
-GRY_dictatorship_democratic_DEF:0 "The Republic of Zaphzia"
-GRY_dictatorship_democratic_ADJ:0 "Zaphzian"
-GRY_dictatorship_fascism:0 "Zaphzan National Republic"
-GRY_dictatorship_fascism_DEF:0 "The National Republic of Zaphzia"
-GRY_dictatorship_fascism_ADJ:0 "Zaphzian"
-GRY_dictatorship_communism:0 "Kaiv Commune"
-GRY_dictatorship_communism_DEF:0 "The Kaiv Commune"
-GRY_dictatorship_communism_ADJ:0 "Kaivan"
-GRY_dictatorship_neutrality:0 "Zaphzan National Republic"
-GRY_dictatorship_neutrality_DEF:0 "The National Republic of Zaphzia"
-GRY_dictatorship_neutrality_ADJ:0 "Zaphzian"
 
 LUS_neutrality:0 "Principality of Lushi"
 LUS_fascism:0 "Principality of Lushi"
@@ -773,6 +664,8 @@ LUS_neutrality_DEF:0 "The Principality of Lushi"
 LUS_fascism_DEF:0 "The Principality of Lushi"
 LUS_communism_DEF:0 "The Peasants of Lushi"
 LUS_democratic_DEF:0 "The Principality of Lushi"
+LUS_reformism:0 "Kingdom of Lushi"
+LUS_reformism:0 "The Kingdom of Lushi"
 LUS_fascism_ADJ:0 "Lushian"
 LUS_democratic_ADJ:0 "Lushian"
 LUS_neutrality_ADJ:0 "Lushian"
