--- a/ttstcc/localisation/tts_defcon_l_english.yml
+++ b/ttstcc/localisation/tts_defcon_l_english.yml
@@ -4,3 +4,7 @@ THREAT_PROGRESS:0 "[?dc_progress]%"
 world_threat_level:0 "Next DEFCON progress:"
 defcon_desc:0 "DEFCON: §R[?global.defcon_level]§!"
 defcon_action_desc:0 "Defcon Effects:"
+
+defcon.1.t:0 "WE WAS FUCKED"
+defcon.1.d:0 "[This.GetNewspaperHeader]WE WAS FUCKED"
+defcon.1.a:0 "WE WAS FUCKED"
