--- a/ttstcc/localisation/countries_l_english.yml
+++ b/ttstcc/localisation/countries_l_english.yml
@@ -46,8 +46,8 @@ GRF_neutrality:0 "Nova Griffonia"
 GRF_neutrality_DEF:0 "Nova Griffonia"
 GRF_fascism:0 "Nova Griffonia"
 GRF_fascism_DEF:0 "Nova Griffonia"
-GRF_communism:0 "West Griffonian Union"
-GRF_communism_DEF:0 "The West Griffonian Union"
+GRF_communism:0 "People's Republic of Nova Griffonia"
+GRF_communism_DEF:0 "People's Republic of Nova Griffonia"
 GRF_democratic:0 "Republic of Nova Griffonia"
 GRF_democratic_DEF:0 "The Republic of Nova Griffonia"
 GRF_fascism_ADJ:0 "Nova Griffonian"
@@ -64,39 +64,19 @@ GRF_CHN_fascism:0 "Protectorate of Nova Griffonia"
 GRF_CHN_fascism_DEF:0 "The Protectorate of Nova Griffonia"
 GRF_CHN_fascism_ADJ:0 "Nova Griffonian"
 
-CRY_neutrality:0 "Crystal Kingdom"
-CRY_neutrality_DEF:0 "The Crystal Kingdom"
+CRY_neutrality:0 "Crystal Empire"
+CRY_neutrality_DEF:0 "The Crystal Empire"
 CRY_fascism:0 "Crystal Empire"
 CRY_fascism_DEF:0 "The Crystal Empire"
-CRY_communism:0 "Crystal Ponies Republic"
-CRY_communism_DEF:0 "The Crystal Ponies Republic"
-CRY_democratic:0 "Crystal Empire"
-CRY_democratic_DEF:0 "The Crystal Empire"
-CRY_DEM_democratic:0 "Crystal Empire"
-CRY_DEM_democratic_DEF:0 "The Crystal Empire"
-CRY_fascism_ADJ:0 "Sombra's"
+CRY_communism:0 "Crystal Republic"
+CRY_communism_DEF:0 "The Crystal Republic"
+CRY_democratic:0 "Crystal Republic"
+CRY_democratic_DEF:0 "The Crystal Republic"
+CRY_fascism_ADJ:0 "Crystal"
 CRY_democratic_ADJ:0 "Crystal"
 CRY_neutrality_ADJ:0 "Crystal"
 CRY_communism_ADJ:0 "Crystal"
-CRY_COM_communism:0 "Crystal Ponies' Republic"
-CRY_COM_communism:0 "The Crystal Ponies' Republic"
-CRY_SOMIMP_fascism:0 "Imperium Crystalis"
-CRY_SOMIMP_fascism_DEF:0 "Imperium Crystalis"
-CRY_CHN_fascism:0 "Crystal Protectorate"
-CRY_CHN_fascism_DEF:0 "The Crystal Protectorate"
-CRY_CHN_fascism_ADJ:0 "Crystal"
-CRY_SOL_fascism:0 "Crystal Province"
-CRY_SOL_fascism_DEF:0 "The Crystal Province"
-CRY_SOL_fascism_ADJ:0 "Crystal"
-CRY_SOL_democratic:0 "Crystal Duchy"
-CRY_SOL_democratic_DEF:0 "The Crystal Duchy"
-CRY_SOL_democratic_ADJ:0 "Crystal"
-CRY_NLR_fascism:0 "Moon Crystal Governorate"
-CRY_NLR_fascism_DEF:0 "The Moon Crystal Governorate"
-CRY_NLR_fascism_ADJ:0 "Crystal"
-CRY_NLR_democratic:0 "Crystal Empire"
-CRY_NLR_democratic_DEF:0 "The Crystal Empire"
-CRY_NLR_democratic_ADJ:0 "Crystal"
+
 
 OLE_neutrality:0 "Kingdom of Olenia"
 OLE_fascism:0 "Olenian Rike"
@@ -725,3 +705,7 @@ MAN_communism_ADJ:0 "Manehattan"
 COM_world_communism:0 "Worldwide Socialist Republic"
 COM_world_communism_DEF:0 "The Socialist Republic of the World"
 COM_world_communism_ADJ:0 "Worlds"
+
+ECH_communism:0 "Changeling Democratic Republic"
+ECH_communism_DEF:0 "Changeling Democratic Republic"
+ECH_communism_ADJ:0 "Changeling"
