--- a/ttstcc/localisation/replace/_eaw_events_l_english.yml
+++ b/ttstcc/localisation/replace/_eaw_events_l_english.yml
@@ -1,4 +1,14 @@
 ﻿l_english:
+
+# Crystal Curtain #
+# Stalliongrad Events #
+ussr.2.t:0 "Vasily Pantsushenko is dead!"
+ussr.2.d:0 "[This.GetNewspaperHeader]News reached us today that General Secretary Vasily Pentsushenko has passed away at his home in Stalliongrad on Januray 1st 1034 at 3:05 AM. (The rest of this can be from the writers who actucally know what their doing".
+ussr.2.a:0 "This is a great loss for our country (STG fac)"
+ussr.2.b:0 "Send our condolences (EQS fac)"
+ussr.2.c:0 "Who dies lol (GRI fac)"
+ussr.2.e:0 "What a shame (generic)"
+
 # Civil War #
 civwar.9.t:0 "[From.GetName] Demands our Subjugation"
 civwar.9.d:0 "With the defeat of the Luna Empire, [From.GetName] is demanding that we allow [From.GetAdjective] officials to oversee our government with the goal of eventual reintegration into [From.GetName]."
