Updated Vasily Death Event Title

--- a/ttstcc/localisation/replace/_eaw_events_l_english.yml
+++ b/ttstcc/localisation/replace/_eaw_events_l_english.yml
@@ -2,7 +2,7 @@
 
 # Crystal Curtain #
 # Stalliongrad Events #
-ussr.2.t:0 "Vasily Pantsushenko is dead!"
+ussr.2.t:0 "Vasily Pantsushenko Is Dead!"
 ussr.2.d:0 "[This.GetNewspaperHeader]News reached us today that General Secretary Vasily Pentsushenko has passed away at his home in Stalliongrad on Januray 1st 1034 at 3:05 AM. (The rest of this can be from the writers who actucally know what their doing".
 ussr.2.a:0 "This is a great loss for our country (STG fac)"
 ussr.2.b:0 "Send our condolences (EQS fac)"
