--- a/ttstcc/localisation/state_names_l_english.yml
+++ b/ttstcc/localisation/state_names_l_english.yml
@@ -686,3 +686,6 @@
  STATE_685:0 "Quartz Forest"
  STATE_686:0 "Umbrum Cage II"
  STATE_687:0 "Evergreen Plain"
+ STATE_688:0 "Pony Town"
+ STATE_689:0 "Snowbury"
+ STATE_690:0 "North Yaket Range"
