--- a/ttstcc/localisation/equestrian_breakaways_l_english.yml
+++ b/ttstcc/localisation/equestrian_breakaways_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
-EBU_neutrality:0 "Buffalo Republic"
-EBU_neutrality_DEF:0 "Buffalo Republic"
+EBU_neutrality:0 "Buffalo Chiefdom"
+EBU_neutrality_DEF:0 "Buffalo Chiefdom"
 EBU_neutrality_ADJ:0 "Buffalo"
 EBU_democratic:0 "Buffalo Republic"
 EBU_democratic_DEF:0 "Buffalo Republic"
@@ -34,51 +34,51 @@ ESB_democratic:0 "Stableside Republic"
 ESB_democratic_DEF:0 "Stableside Republic"
 ESB_democratic_ADJ:0 "Stableside"
 
-EAZ_neutrality:0 "Aztlan State"
-EAZ_neutrality_DEF:0 "Aztlan State"
+EAZ_neutrality:0 "Province of Aztlan"
+EAZ_neutrality_DEF:0 "Province of Aztlan"
 EAZ_neutrality_ADJ:0 "Aztlan"
 EAZ_democratic:0 "Aztlan State"
 EAZ_democratic_DEF:0 "Aztlan State"
 EAZ_democratic_ADJ:0 "Aztlan"
 
-EBM_neutrality:0 "Baltimare Republic"
-EBM_neutrality_DEF:0 "Baltimare Republic"
-EBM_neutrality_ADJ:0 "Baltimare"
+EBM_neutrality:0 "Mayordom of Baltimare"
+EBM_neutrality_DEF:0 "Mayordom of Baltimare"
+EBM_neutrality_ADJ:0 "Baltimarian"
 EBM_democratic:0 "Baltimare Republic"
 EBM_democratic_DEF:0 "Baltimare Republic"
 EBM_democratic_ADJ:0 "Baltimare"
 
-ETH_neutrality:0 "Thestralia"
-ETH_neutrality_DEF:0 "Thestralia"
+ETH_neutrality:0 "Thestralian Republic"
+ETH_neutrality_DEF:0 "Thestralian Republic"
 ETH_neutrality_ADJ:0 "Thestralian"
 ETH_democratic:0 "Thestralia"
 ETH_democratic_DEF:0 "Thestralia"
 ETH_democratic_ADJ:0 "Thestralian"
 
-ELP_neutrality:0 "Los Pegasus"
-ELP_neutrality_DEF:0 "Los Pegasus"
-ELP_neutrality_ADJ:0 "Los Pegasus"
+ELP_neutrality:0 "Mayordom of Los Pegasus"
+ELP_neutrality_DEF:0 "Mayordom of Los Pegasus"
+ELP_neutrality_ADJ:0 "Los-Pegasus"
 ELP_democratic:0 "Los Pegasus"
 ELP_democratic_DEF:0 "Los Pegasus"
 ELP_democratic_ADJ:0 "Los Pegasus"
 
-ETA_neutrality:0 "Tall Tale"
-ETA_neutrality_DEF:0 "Tall Tale"
+ETA_neutrality:0 "Mayordom of Tall Tale"
+ETA_neutrality_DEF:0 "Mayordom of Tall Tale"
 ETA_neutrality_ADJ:0 "Tall Tale"
-ETA_democratic:0 "Tall Tale"
+ETA_democratic:0 "Tall Tale Republic"
 ETA_democratic_DEF:0 "Tall Tale"
 ETA_democratic_ADJ:0 "Tall Tale"
 
-EVA_neutrality:0 "Vanhoover Republic"
-EVA_neutrality_DEF:0 "Vanhoover Republic"
-EVA_neutrality_ADJ:0 "Vanhoover"
+EVA_neutrality:0 "Mayordom of Vanhoover"
+EVA_neutrality_DEF:0 "Mayordom of Vanhoover"
+EVA_neutrality_ADJ:0 "Vanhooverian"
 EVA_democratic:0 "Vanhoover Republic"
 EVA_democratic_DEF:0 "Vanhoover Republic"
 EVA_democratic_ADJ:0 "Vanhoover"
 
-EAC_neutrality:0 "Acornage State"
-EAC_neutrality_DEF:0 "Acornage State"
-EAC_neutrality_ADJ:0 "Acornage"
+EAC_neutrality:0 "Duchy of Acornage"
+EAC_neutrality_DEF:0 "Duchy of Acornage"
+EAC_neutrality_ADJ:0 "Acornagian"
 EAC_democratic:0 "Acornage State"
 EAC_democratic_DEF:0 "Acornage State"
 EAC_democratic_ADJ:0 "Acornage"
@@ -90,51 +90,51 @@ EMA_democratic:0 "Marechester Republic"
 EMA_democratic_DEF:0 "Marechester Republic"
 EMA_democratic_ADJ:0 "Marechester"
 
-EWN_neutrality:0 "Whinnyapolis"
-EWN_neutrality_DEF:0 "Whinnyapolis"
-EWN_neutrality_ADJ:0 "Whinnyapolis"
+EWN_neutrality:0 "Autonomy of Whinyapolis"
+EWN_neutrality_DEF:0 "Autonomy of Whinyapolis"
+EWN_neutrality_ADJ:0 "Whinnyapolisian"
 EWN_democratic:0 "Whinnyapolis"
 EWN_democratic_DEF:0 "Whinnyapolis"
 EWN_democratic_ADJ:0 "Whinnyapolis"
 
-EBA_neutrality:0 "Bales"
-EBA_neutrality_DEF:0 "Bales"
+EBA_neutrality:0 "Kingdom of Bales"
+EBA_neutrality_DEF:0 "Kingdom of Bales"
 EBA_neutrality_ADJ:0 "Bales"
 EBA_democratic:0 "Bales"
 EBA_democratic_DEF:0 "Bales"
 EBA_democratic_ADJ:0 "Bales"
 
-ESG_neutrality:0 "Stratusburg"
-ESG_neutrality_DEF:0 "Stratusburg"
+ESG_neutrality:0 "Furstentum von Stratusburg"
+ESG_neutrality_DEF:0 "Furstentum von Stratusburg"
 ESG_neutrality_ADJ:0 "Stratusburg"
 ESG_democratic:0 "Stratusburg"
 ESG_democratic_DEF:0 "Stratusburg"
 ESG_democratic_ADJ:0 "Stratusburg"
 
-EPR_neutrality:0 "Prench Republic"
-EPR_neutrality_DEF:0 "Prench Republic"
+EPR_neutrality:0 "Principaute of Prance"
+EPR_neutrality_DEF:0 "Principaute of Prance"
 EPR_neutrality_ADJ:0 "Prench"
 EPR_democratic:0 "Prench Republic"
 EPR_democratic_DEF:0 "Prench Republic"
 EPR_democratic_ADJ:0 "Prench"
 
-EAL_neutrality:0 "Albion Republic"
-EAL_neutrality_DEF:0 "Albion Republic"
+EAL_neutrality:0 "Albion Commonwealth"
+EAL_neutrality_DEF:0 "Albion Commonwealth"
 EAL_neutrality_ADJ:0 "Albion"
 EAL_democratic:0 "Albion Republic"
 EAL_democratic_DEF:0 "Albion Republic"
 EAL_democratic_ADJ:0 "Albion"
 
-EFI_neutrality:0 "Fillidelphia State"
-EFI_neutrality_DEF:0 "Fillidelphia State"
+EFI_neutrality:0 "Mayordom of Fillydelphia"
+EFI_neutrality_DEF:0 "Mayordom of Fillydelphia"
 EFI_neutrality_ADJ:0 "Fillidelphian"
-EFI_democratic:0 "Fillidelphia State"
-EFI_democratic_DEF:0 "Fillidelphia State"
+EFI_democratic:0 "Fillydelphia State"
+EFI_democratic_DEF:0 "Fillydelphia State"
 EFI_democratic_ADJ:0 "Fillidelphian"
 
-EMN_neutrality:0 "Manehatten State"
-EMN_neutrality_DEF:0 "Manehatten State"
-EMN_neutrality_ADJ:0 "Manehatten"
+EMN_neutrality:0 "Manehattan Republic"
+EMN_neutrality_DEF:0 "Manehattan Republic"
+EMN_neutrality_ADJ:0 "Manehattenian"
 EMN_democratic:0 "Manehatten State"
 EMN_democratic_DEF:0 "Manehatten State"
 EMN_democratic_ADJ:0 "Manehatten"
